// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render children with app prop 1`] = `
<Base
  className="application"
  customMessages={Object {}}
>
  <div
    app={AppDelegateInstance {}}
  >
    TestApp
  </div>
</Base>
`;

exports[`should render custom properties on component 1`] = `
<Base
  className="application custom-class"
  customMessages={Object {}}
  id="my-id"
>
  <div>
    TestApp
  </div>
</Base>
`;

exports[`should render default component 1`] = `
<Base
  className="application"
  customMessages={Object {}}
>
  <div>
    TestApp
  </div>
</Base>
`;
